[package]
name = "toel"
version = "0.1.0"
authors = ["Verri A <verri@tiduronline.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"]}
xml-rs = "0.8.3"
regex = "1"
colored = "2.0.0"
futures = "0.3.8"

#
# Sesi Curhat:
# tokio ne nganggo versi 0.2, 
# soale 0.3 marai ndase jeblug,
# ora compatible karo reqwest soale.
#
tokio = { version = "0.2.9", features = ["full"] } 
